--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@reduxjs/toolkit": "^1.4.0",
-        "axios": "^0.19.2",
-        "lodash": "^4.17.19",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.1",
-        "react-router-dom": "^5.2.0",
-        "redux": "^4.0.5",
-        "webpack": "^4.44.1"
-    },
-    "devDependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@reduxjs/toolkit": "^1.4.0",
+        "@types/qs": "^6.9.4",
+        "axios": "^0.19.2",
+        "lodash": "^4.17.19",
+        "qs": "^6.9.4",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
+        "webpack": "^4.44.1",
+        "typescript": "^3.9.7",
         "@types/axios": "^0.14.0",
         "@types/html-webpack-plugin": "^3.2.3",
         "@types/lodash": "^4.14.159",
@@ -32,11 +31,12 @@
         "@types/node": "^14.0.27",
         "@types/react": "^16.9.44",
         "@types/react-dom": "^16.9.8",
-        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
         "@types/webpack": "^4.41.21",
         "@typescript-eslint/eslint-plugin": "^3.8.0",
-        "@typescript-eslint/parser": "^3.8.0",
+        "@typescript-eslint/parser": "^3.8.0"
+    },
+    "devDependencies": {
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^4.2.1",
         "eslint": "^7.6.0",
@@ -54,7 +54,6 @@
         "sass-loader": "^9.0.3",
         "style-loader": "^1.2.1",
         "ts-loader": "^8.0.2",
-        "typescript": "^3.9.7",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "webpack-node-externals": "^2.5.1"
