--- a/package.json
+++ b/package.json
@@ -15,26 +15,30 @@
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@reduxjs/toolkit": "^1.4.0",
-        "@types/qs": "^6.9.4",
-        "axios": "^0.19.2",
-        "lodash": "^4.17.19",
-        "qs": "^6.9.4",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-router-dom": "^5.2.0",
-        "webpack": "^4.44.1",
-        "typescript": "^3.9.7",
         "@types/axios": "^0.14.0",
         "@types/html-webpack-plugin": "^3.2.3",
         "@types/lodash": "^4.14.159",
         "@types/material-ui": "^0.21.7",
         "@types/node": "^14.0.27",
+        "@types/qs": "^6.9.4",
         "@types/react": "^16.9.44",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
+        "@types/redux": "^3.6.0",
         "@types/webpack": "^4.41.21",
         "@typescript-eslint/eslint-plugin": "^3.8.0",
-        "@typescript-eslint/parser": "^3.8.0"
+        "@typescript-eslint/parser": "^3.8.0",
+        "axios": "^0.19.2",
+        "lodash": "^4.17.19",
+        "qs": "^6.9.4",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-redux": "^7.2.1",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "typescript": "^3.9.7",
+        "webpack": "^4.44.1"
     },
     "devDependencies": {
         "clean-webpack-plugin": "^3.0.0",
