--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "file-manager-with-permissions",
-    "version": "1.0.0",
+    "version": "0.5.0",
     "description": "",
-    "main": "index.js",
+    "main": "npm-build/main.js",
     "scripts": {
-        "start": "webpack-dev-server",
-        "build": "webpack --mode production",
-        "build-dev": "webpack"
+        "start": "webpack-dev-server --config webpack-local.config.js",
+        "build": "webpack --mode production --config webpack-npm.config.js"
     },
     "keywords": [],
     "author": "",
