--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "0.5.0",
     "description": "",
     "main": "npm-build/build.js",
+    "types": "npm-build/app/App.d.ts",
     "scripts": {
         "start": "webpack-dev-server --config webpack-local.config.js",
-        "build": "webpack --mode production --config webpack-npm.config.js"
+        "build": "webpack --config webpack-npm.config.js"
     },
     "keywords": [],
     "author": "",
@@ -59,6 +60,7 @@
         "ts-loader": "^8.0.2",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^5.1.4",
         "webpack-node-externals": "^2.5.1"
     }
 }
