--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "outDir": "./npm-build/",
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
@@ -13,8 +13,9 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
+        "declaration": true
     },
     "include": [
         "src"
-    ]
+    ],
 }
