--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@typescript-eslint/eslint-plugin": "^3.8.0",
         "@typescript-eslint/parser": "^3.8.0",
         "axios": "^0.19.2",
+        "history": "^5.0.0",
         "lodash": "^4.17.19",
         "qs": "^6.9.4",
         "react": "^16.13.1",
