--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/html-webpack-plugin": "^3.2.3",
         "@types/lodash": "^4.14.159",
         "@types/material-ui": "^0.21.7",
+        "@types/memoizee": "^0.4.5",
         "@types/node": "^14.0.27",
         "@types/qs": "^6.9.4",
         "@types/react": "^16.9.44",
@@ -32,6 +33,7 @@
         "axios": "^0.19.2",
         "history": "^5.0.0",
         "lodash": "^4.17.19",
+        "memoizee": "^0.4.15",
         "qs": "^6.9.4",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
